--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         </section>
         <section class="cards-sec w-11/12 mx-auto py-10 flex flex-col sm:grid sm:grid-cols-12 gap-8 ">
             <aside class="cards-history bg-white rounded-xl shadow-lg ring-opacity-40 w-full sm:col-span-3 order-1 sm:order-2">
-                <div class="flex justify-between items-center p-7">
+                <div class="flex justify-between items-center p-6 gap-2">
                     <div class="flex justify-center items-center gap-2 text-xl">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Call History</p>
+                        <p class="text-[16px]">Call History</p>
                     </div>
                    <div class="text-center bg-[#00a63e] rounded-full flex justify-center h-10 w-24">
                         <button class="font-semibold text-white"> Clear</button>
@@ -51,7 +51,7 @@
                 </div>
             </aside>
             <section class="cards sm:col-span-9 gap-8 order-2 sm:order-1 w-full">  
-                <div class="grid grid-cols-1 sm:grid-cols-3 gap-5">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5">
                     <!-- card-1 -->
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="flex justify-between gap-3">
+                    <div class="flex justify-between gap-3 mt-8">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
@@ -318,7 +318,8 @@
             
         </section>
     </main>
-   
+
+    
     <script src="./script.js"></script>
 </body>
 </html>
