--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="flex justify-center items-center gap-5">
                 <div class="flex justify-center items-center gap-2.5">
-                    <p class="font-bold">0</p>
+                    <p class="font-bold"><span class="" id="heart-count">0</span></p>
                     <img src="./assets/heart.png" alt="" class="w-[30px]">
                 </div>
                 <div class="flex justify-center items-center gap-2.5">
@@ -56,7 +56,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i id="" class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">National Emergency Number</h2>
@@ -85,7 +85,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/police.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Police Helpline Number</h2>
@@ -114,7 +114,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/fire-service.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Fire Service Number</h2>
@@ -143,7 +143,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/ambulance.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Ambulance Service</h2>
@@ -172,7 +172,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Women & Child Helpline</h2>
@@ -201,7 +201,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Anti-Corruption Helpline</h2>
@@ -230,7 +230,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Electricity Helpline</h2>
@@ -259,7 +259,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Brac Helpline</h2>
@@ -288,7 +288,7 @@
                     <div class="bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
                         <h2 class="font-bold text-2xl">Bangladesh Railway Helpline </h2>
