--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     <img src="./assets/heart.png" alt="" class="w-[30px]">
                 </div>
                 <div class="flex justify-center items-center gap-2.5">
-                    <p class="font-bold">100</p>
+                    <p class="font-bold" id="coin-balance">100</p>
                     <img src="./assets/coin.png" alt="" class="w-6">
                 </div>
-                <div class="flex justify-center items-center">
-                    <p class="font-semibold"><span>0</span> Copy</p>
+                <div class="flex justify-center items-center bg-[#00A63E] rounded-3xl w-[114px] h-12">
+                    <p class="font-semibold text-white"><span id="copy-count">0</span> Copy</p>
                 </div>
             </div>
         </nav>
@@ -39,7 +39,7 @@
             </div>
         </section>
         <section class="cards-sec w-11/12 mx-auto py-10 flex flex-col sm:grid sm:grid-cols-12 gap-8 ">
-            <aside class="cards-history bg-white rounded-xl shadow-lg ring-opacity-40 w-full sm:col-span-3 order-1 sm:order-2">
+            <aside class="cards-history bg-white rounded-xl shadow-lg ring-opacity-40 sm:w-full sm:col-span-3 order-1 sm:order-2 flex flex-col">
                 <div class="flex justify-between items-center p-6 gap-2">
                     <div class="flex justify-center items-center gap-2 text-xl">
                         <i class="fa-regular fa-clock"></i>
@@ -49,23 +49,34 @@
                         <button class="font-semibold text-white"> Clear</button>
                     </div>
                 </div>
+                <div id ="call-history-container">
+                    <div class="bg-[#dcdcdc] p-3 rounded-xl flex justify-between items-center m-3 mb-2">
+                        <div class="flex flex-col">
+                            <p class="font-bold">Service Name</p> 
+                            <p>Number</p>
+                        </div>
+                        <div>
+                        <p>Time</p>
+                        </div>
+                    </div>
+                </div>
             </aside>
             <section class="cards sm:col-span-9 gap-8 order-2 sm:order-1 w-full">  
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-5">
                     <!-- card-1 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i id="" class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">National Emergency Number</h2>
+                        <h2 class="service-name font-bold text-2xl">National Emergency Number</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">National Emergency</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">999</p>
+                        <p class="service-number font-bold text-3xl mb-2">999</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-10 bg-gray-200 rounded-full">
                                 <p class="text-center">All</p>
@@ -77,24 +88,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card--2 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/police.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Police Helpline Number</h2>
+                        <h2 class="service-name font-bold text-2xl">Police Helpline Number</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Police</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">999</p>
+                        <p class="service-number font-bold text-3xl mb-2">999</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-14 bg-gray-200 rounded-full">
                                 <p class="text-center">Police</p>
@@ -106,24 +117,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card--3 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/fire-service.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Fire Service Number</h2>
+                        <h2 class="service-name font-bold text-2xl">Fire Service Number</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Fire Service</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">999</p>
+                        <p class="service-number font-bold text-3xl mb-2">999</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-10 bg-gray-200 rounded-full">
                                 <p class="text-center">Fire</p>
@@ -135,24 +146,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card--4 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/ambulance.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Ambulance Service</h2>
+                        <h2 class="service-name font-bold text-2xl">Ambulance Service</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Ambulance</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">1994-999999</p>
+                        <p class="service-number font-bold text-3xl mb-2">1994-999999</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-16 bg-gray-200 rounded-full">
                                 <p class="text-center">Health</p>
@@ -164,24 +175,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card--5 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Women & Child Helpline</h2>
+                        <h2 class="service-name font-bold text-2xl">Women & Child Helpline</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Women & Child Helpline</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">109</p>
+                        <p class="service-number font-bold text-3xl mb-2">109</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-14 bg-gray-200 rounded-full">
                                 <p class="text-center">Help</p>
@@ -193,24 +204,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card---6 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Anti-Corruption Helpline</h2>
+                        <h2 class="service-name font-bold text-2xl">Anti-Corruption Helpline</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Anti-Corruption</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">106</p>
+                        <p class="service-number font-bold text-3xl mb-2">106</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-13 bg-gray-200 rounded-full">
                                 <p class="text-center">Govt.</p>
@@ -222,24 +233,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card--7 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Electricity Helpline</h2>
+                        <h2 class="service-name font-bold text-2xl">Electricity Helpline</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Electricity Outage</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">16216</p>
+                        <p class="service-number font-bold text-3xl mb-2">16216</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-22 py-1 bg-gray-200 rounded-full">
                                 <p class="text-center">Electricity</p>
@@ -251,24 +262,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- crd---8 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Brac Helpline</h2>
+                        <h2 class="service-name font-bold text-2xl">Brac Helpline</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Brac</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">16445</p>
+                        <p class="service-number font-bold text-3xl mb-2">16445</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-12 bg-gray-200 rounded-full">
                                 <p class="text-center">NGO</p>
@@ -280,24 +291,24 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
                     <!-- card---9 -->
-                    <div class="bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
+                    <div class="card bg-white rounded-xl shadow-lg ring-opacity-40 mx-w-sm p-5 gap-5 flex flex-col">
                     <div class="flex justify-between items-center">
                         <img src="./assets/emergency.png" alt="" class="w-10">
                         <i class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="font-bold text-2xl">Bangladesh Railway Helpline </h2>
+                        <h2 class="service-name font-bold text-2xl">Bangladesh Railway Helpline </h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">Bangladesh Railway</p>
                         </div>
                     </div>
                     <div>
-                        <p class="font-bold text-3xl mb-2">163</p>
+                        <p class="service-number font-bold text-3xl mb-2">163</p>
                         <div class="text-[#5c5c5c]">
                             <div class="w-15 bg-gray-200 rounded-full">
                                 <p class="text-center">Travel</p>
@@ -309,7 +320,7 @@
                             <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class=""><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
