--- a/index.html
+++ b/index.html
@@ -46,19 +46,11 @@
                         <p class="text-[16px]">Call History</p>
                     </div>
                    <div class="text-center bg-[#00a63e] rounded-full flex justify-center h-10 w-24">
-                        <button class="font-semibold text-white"> Clear</button>
+                        <button class="font-semibold text-white" id="clear-btn"> Clear</button>
                     </div>
                 </div>
                 <div id ="call-history-container">
-                    <div class="bg-[#dcdcdc] p-3 rounded-xl flex justify-between items-center m-3 mb-2">
-                        <div class="flex flex-col">
-                            <p class="font-bold">Service Name</p> 
-                            <p>Number</p>
-                        </div>
-                        <div>
-                        <p>Time</p>
-                        </div>
-                    </div>
+                    
                 </div>
             </aside>
             <section class="cards sm:col-span-9 gap-8 order-2 sm:order-1 w-full">  
@@ -70,7 +62,7 @@
                         <i id="" class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="service-name font-bold text-2xl">National Emergency Number</h2>
+                        <h2 class="service-name font-bold text-lg">National Emergency Number</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">National Emergency</p>
                         </div>
@@ -85,7 +77,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -114,7 +106,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -143,7 +135,7 @@
                     </div>
                     <div class="flex justify-between gap-3 mt-8">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -172,7 +164,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -201,7 +193,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -230,7 +222,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -259,10 +251,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="call-btn "><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -288,7 +280,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
@@ -317,7 +309,7 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c]"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
                             <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
