--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="text-[16px]">Call History</p>
                     </div>
                    <div class="text-center bg-[#00a63e] rounded-full flex justify-center h-10 w-24">
-                        <button class="font-semibold text-white" id="clear-btn"> Clear</button>
+                        <button class="cursor-pointer font-semibold text-white" id="clear-btn"> Clear</button>
                     </div>
                 </div>
                 <div id ="call-history-container">
@@ -62,7 +62,7 @@
                         <i id="" class="fa-regular fa-heart heart-icon"></i>
                     </div>
                     <div>
-                        <h2 class="service-name font-bold text-lg">National Emergency Number</h2>
+                        <h2 class="service-name font-bold text-2xl">National Emergency Number</h2>
                         <div>
                             <p class="text-lg text-[#5c5c5c]">National Emergency</p>
                         </div>
@@ -77,10 +77,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
-                        </div>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                        </div> 
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -106,10 +106,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -135,10 +135,10 @@
                     </div>
                     <div class="flex justify-between gap-3 mt-8">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -164,10 +164,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -193,10 +193,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -222,10 +222,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -251,10 +251,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn "><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn "><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -280,10 +280,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
@@ -309,10 +309,10 @@
                     </div>
                     <div class="flex justify-between gap-3">
                         <div class="border-1 border-gray-400 flex-1 flex justify-center rounded-lg h-10 ">
-                            <button class="text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
+                            <button class="cursor-pointer text-[#5c5c5c] copy-btn"><i class="fa-regular fa-copy"></i>Copy</button>
                         </div>
                         <div class="flex-1 text-center bg-[#00a63e] rounded-lg flex justify-center h-10">
-                            <button class="call-btn"><i class="fa-solid fa-phone"></i> Call</button>
+                            <button class="cursor-pointer call-btn"><i class="fa-solid fa-phone"></i> Call</button>
                         </div>
                     </div>
                     </div>
